--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,5 +1,5 @@
 ---
-layout: landing
+layout: homeland
 title: Error - Page Not Found
 desciption: The page you're trying to open may have been moved or no longer exists.
 permalink: /404.html
