Renamed landing page to homev1-1

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,5 +1,5 @@
 ---
-layout: homeland
+layout: homev1-1
 title: Error - Page Not Found
 desciption: The page you're trying to open may have been moved or no longer exists.
 permalink: /404.html
