Proofread posts (even one from 2016, my goodness!)

--- a/_posts/2016-07-26-worth.md
+++ b/_posts/2016-07-26-worth.md
@@ -13,7 +13,7 @@ It’s me I don’t trust. (Don’t take it personally, Me, it’s not just you;
 
 Over the months though, while I’ve finally been allowed days all to myself, I’ve come to terms about what truly drove me to sever ties with platforms so permanently threaded into the fabric of our generation. I couldn’t admit it to myself before: I wrote posts for their likability and took photos for their trend value and tweeted for retweets. I wanted to be liked and favorited. I wanted to be approved. Acknowledged. Validated. I *craved* for attention.
 
-And I knew what that did to me, to my body, to my mental health. I slept at 4 a.m. I engrossed at screens on full brightness because the likes look more dazzling and the thumbs up look more real. The value of a share absorbed me, fulfilled my vanity and glorified my narcissism. I sold myself to people I did not know or people I never even liked and I was bought for cheap, because my worth was nothing more than two pennies of a like and a cent of share.
+And I knew what that did to me, to my body, to my mental health. I slept at 4 a.m. I engrossed at screens on full brightness because the likes look more dazzling and the thumbs up look more real. The value of a share absorbed me, fulfilled my vanity and glorified my narcissism. I sold myself to people I did not know or people I never even liked and I was bought for cheap, because my worth was nothing more than two pennies of a like and a cent of a share.
 
 So I left.
 
