--- a/_posts/2016-07-26-worth.md
+++ b/_posts/2016-07-26-worth.md
@@ -11,7 +11,7 @@ Quick disclaimer: I don’t promote leaving social media nor do I advertise its 
 
 It’s me I don’t trust. (Don’t take it personally, Me, it’s not just you; it’s everyone.) At first, I could easily justify my departure as a direction toward productivity. I failed miserably at time management and the hours in my days dwindled quickly, thanks to time spent scrolling. You see, it’s not exactly the scrolling that’s the problem here, but the aimlessness of the scrolling, the upward flicking of the thumb to view content that we did not ask for, or content that will hopefully, possibly, maybe provide any form of facial movement (I have a resting bitch face so I know what I’m talking about).
 
-Over the months though, while I’ve finally been allowed days all to myself, I’ve come to terms about what truly drove me to sever ties with platforms so permanently threaded into the fabric of our generation. I couldn’t admit it to myself before: I wrote posts for their likability and took photos for their trend value and tweeted for retweets. I wanted to be liked and favorited. I wanted to be approved. Acknowledged. Validated. I *craved* for attention.
+Over the months though, while I’ve finally been allowed days all to myself, I’ve come to terms about what truly drove me to sever ties with platforms so permanently threaded into the fabric of our generation. I couldn’t admit it to myself before: I wrote posts for their likability and took photos for their trend value and tweeted for retweets. I wanted to be liked and favorited. I wanted to be approved of. Acknowledged. Validated. I *craved* for attention.
 
 And I knew what that did to me, to my body, to my mental health. I slept at 4 a.m. I engrossed at screens on full brightness because the likes look more dazzling and the thumbs up look more real. The value of a share absorbed me, fulfilled my vanity and glorified my narcissism. I sold myself to people I did not know or people I never even liked and I was bought for cheap, because my worth was nothing more than two pennies of a like and a cent of a share.
 
